fixed logo letter spacing so that gaps are no longer shown in highlighted background; changed logo color

--- a/Portfolio/Theme/Highland_v2.0.0/assets/css/styles.css
+++ b/Portfolio/Theme/Highland_v2.0.0/assets/css/styles.css
@@ -8725,5 +8725,11 @@ padding-right: 17px;
 .application-name {
     font-family: 'Unsteady Oversteer';
     font-size: 28px;
-    color: #3299bb;
+    /*color: #3299bb;*/
+    color: #9966cc;
+    letter-spacing: -1px;
+}
+
+.navbar-header a.application-name:hover {
+    color: #9966cc;
 }
